# meetingscribe

./: README.md  pyproject.toml
meetingscribe/: __init__.py  app.py  config.py  paths.py  service.py  session.py
meetingscribe/api/: __init__.py  server.py
meetingscribe/audio/: __init__.py  devices.py  dsp.py  recorder.py
meetingscribe/llm/: __init__.py  anthropic.py  base.py  copilot.py  copilot_auth.py  factory.py  openai_compat.py
meetingscribe/notes/: __init__.py  builder.py  prompts.py
meetingscribe/store/: __init__.py  db.py  secrets.py
meetingscribe/stt/: __init__.py  engine.py
tests/: conftest.py  test_api.py  test_copilot.py  test_dsp.py  test_llm.py  test_notes.py  test_secrets.py
ui/: index.html
ui/css/: style.css
ui/js/: app.js
