[project]
name = "meetingscribe"
version = "0.1.0"
description = "Standalone, cross-platform meeting recorder: local Whisper transcription + vendor-agnostic LLM note generation."
requires-python = ">=3.10"
authors = [{ name = "Gighy" }]

# Core deps (always needed for the backend + report pipeline).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
# Speech-to-text (heavy: pulls CTranslate2). Install for real transcription.
stt = ["faster-whisper>=1.0.3"]
# Audio capture. pyaudiowpatch is Windows-only (WASAPI loopback); sounddevice everywhere.
audio = ["sounddevice>=0.4.6", "numpy>=1.26"]
audio-windows = ["pyaudiowpatch>=0.2.12"]
# Desktop window shell. Without it the app still runs as a local web server.
desktop = ["pywebview>=5.1"]
# PDF export.
pdf = ["weasyprint>=61.0"]
# Optional speaker diarization (very heavy; off by default).
diarization = ["pyannote.audio>=3.1"]
# Everything for a full Windows desktop install.
full = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pywebview>=5.1",
    "weasyprint>=61.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
meetingscribe = "meetingscribe.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["meetingscribe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
